fix issue where max image height cause distortion on smaller screens

--- a/css/photo-styles.css
+++ b/css/photo-styles.css
@@ -358,6 +358,7 @@ img {
   }
 
   img {
+    max-height: unset;
     width: 100%;
     height: auto;
   }
